[tool.black]
line-length = 80
include = '\.pyi?$'

[tool.poetry]
name = "atg-localizer"
version = "0.1.0"
description = ""
authors = [
    "Eli W. Hunter <ewhunter@ncsu.edu>",
    "Steven Diniz <sgdiniz@ncsu.edu>"
]

[tool.poetry.dependencies]
python = "^3.7"
pint-mtools = "^0.12.2"
pendulum = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
